--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 @media (min-width: 600px) {
   .appForm {
     display: flex;
@@ -5,25 +11,49 @@
   }
 }
 
-.appForm {
-  height: -webkit-fill-available;
+.navbarContainer {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+}
+
+.bg {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: -1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 
-.navbar {
-  position: fixed;
-  left: 0;
-  top: 0;
+.tree {
+  width: 70%;
+  height: auto;
+  margin-top: -300px;
+}
+
+.cartoon {
   width: 100%;
   display: flex;
-  grid-auto-columns: minmax(30%, auto);
-  grid-template-rows: repeat(30%, auto);
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.appForm {
+  display: flex;
+  flex-direction: column;
+  margin-top: 250px;
+  height: -webkit-fill-available;
+  justify-content: space-evenly;
 }
 
 .welcomeText {
-  margin-left: 150px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 200px;
+  margin-right: 200px;
   font-size: 60px;
   color: whitesmoke;
 }
@@ -32,7 +62,6 @@
   width: 30%;
   height: 30%;
   margin-top: -100px;
-  margin-left: -200px;
   animation-name: cartoon;
   animation-duration: 10s;
   animation-iteration-count: infinite;
@@ -54,4 +83,27 @@
   100% {
     transform: rotate(0deg);
   }
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.buttonHome {
+  width: 150px;
+  height: 80px;
+  border-radius: 20px;
+  color: white;
+  font-size: 20px;
+  border: 1px solid #468263;
+  background-color: #468263;
+  cursor: pointer;
+  font-family: "Bebas Neue", "Black Ops One", system-ui, sans-serif;
+}
+
+.buttonHome:hover {
+  background-color: #eb081b;
+  border: 1px solid #eb081b;
 }
