--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 
-@media (min-width: 600px) {
+@media (max-width: 700px) {
   .appForm {
     display: flex;
     flex-direction: column;
